--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                         
                         </div>
                     </div>
+
+                //This button is not fully functional except the "Today" one, just a showcase and will add it later.
                     <div class = "task">
                         <p class="task-p">TASKS</p>
                         <div class="task-list">
@@ -35,6 +37,8 @@
                             </ul>
                         </div>
                     </div>
+
+                    //This button is not fully functional, just a showcase and will add it later.
                     <div class="list-li">
                         <p class="list-p">LISTS</p>
                         <ul class="list-ul">
@@ -45,6 +49,7 @@
                         </ul>
                     </div>
                 </div>
+                 //This button is not fully functional, just a showcase and will add it later.
                 <div class="tags">
                     <p class="tag-p">TAGS</p>
                     <div class="tags-div">
@@ -53,7 +58,7 @@
                         <button class="tag-btn"> <i class="fa-solid fa-plus"></i> Add Tag</button>
                     </div>
                 </div>
-
+                 //This button is not fully functional, just a showcase and will add it later.
                 <div class="nav-footer">
                     <ul class="nav-footer-ul">
                         <li class="nav-footer-li"> <i class="fa-solid fa-sliders"></i> Settings</li>
